# 42_webserv

./: .gitignore  ErrorPages.hpp  Listen.hpp  Location.hpp  Parser.hpp  README.md  push.sh
exemplos/exemplo3_alexei/: .gitignore  Dockerfile  Makefile  README.md  cmd-test.txt  docker-compose.yml  pyproject.toml
exemplos/exemplo3_alexei/config_files/: default.conf  docker.conf  location_param_error.config  same-port-error.conf  server_autoindex_error.config  server_body_size_error.config  server_cgi_error.config  server_host_error.config  server_param_error.config  server_redirect_error.config  server_root_error.config  ubuntu_tester.conf
exemplos/exemplo3_alexei/root_html/: custom_404.html  custom_405.html  index.html  index2.html  index3.html  index4.html
exemplos/exemplo3_alexei/root_html/bad_folder/: index.html
exemplos/exemplo3_alexei/root_html/block_server/: index.html
exemplos/exemplo3_alexei/root_html/default_responses/: 001.html  100.html  101.html  102.html  200.html  201.html  202.html  203.html  204.html  206.html  (+59 more)
exemplos/exemplo3_alexei/srcs/: CgiHandler.cpp  CgiHandler.hpp  FileParser.cpp  FileParser.hpp  Http.cpp  Http.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerLocation.cpp  ServerLocation.hpp  Utils.cpp  Utils.hpp  WebServ.cpp  WebServ.hpp  main.cpp
exemplos/exemplo3_alexei/tests/: client.py  config.py  conftest.py  utils.py
exemplos/exemplo3_alexei/web_tic_tac_toe/: index.html
exemplos/exemplo3_alexei/webnotes/: delete-notes.html  index.html
exemplos/exemplo3_alexei/wordserv/: index.html
(+134 files in other folders)
