[tool.poetry]
authors = ["Choi <julianochoi@gmail.com>"]
description = ""
name = "webserv"
readme = "README.md"
version = "0.1.0"

[tool.pytest.ini_options]
markers = [
  "rfc: Tests that evaluate if the webserver follows RFC protocols.",
  "stress: tests that determine if the webserver can handle heavy load.",
]
minversion = "7.0"
testpaths = "tests"

[tool.poetry.dependencies]
pytest = "7.2.1"
python = "^3.8.1"
requests = "^2.28.2"
asyncio = "^3.4.3"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[tool.isort]
profile = "black"
